zz-alb-oidc-test/02-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  namespace: alb-oidc-test
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
      - name: app1-nginx
        image: stacksimplify/kube-nginxapp1:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  namespace: alb-oidc-test
  labels:
    app: app1-nginx
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
  - port: 80
    targetPort: 80
